<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ModernImageSlider.ModernImageSliderActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/cardProfilePic"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/profile_pic"
            android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textHello"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/hello_android"
        android:textColor="#212121"
        android:textSize="17sp"
        android:fontFamily="@font/product_sans_bold"
        app:layout_constraintBottom_toBottomOf="@id/cardProfilePic"
        app:layout_constraintEnd_toStartOf="@id/cardProfilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardProfilePic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textWhereAreWe"
        android:text="@string/seven_wonders"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#212121"
        android:textSize="35sp"
        android:fontFamily="@font/antonio_bold"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/cardProfilePic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textGoing"
        android:text="@string/of_the_world"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#757575"
        android:textSize="30sp"
        android:includeFontPadding="false"
        android:fontFamily="@font/antonio_bold"
        app:layout_constraintTop_toBottomOf="@id/textWhereAreWe"/>
    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/locationViewPager"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintBottom_toTopOf="@id/bottomText"
        app:layout_constraintTop_toBottomOf="@id/textGoing"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/bottomText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/do_you_find_it_helpful"
        android:fontFamily="@font/product_sans_bold"
        android:textColor="#212121"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>





